--- a/Mario Kart Simulator! JS/Index.html
+++ b/Mario Kart Simulator! JS/Index.html
@@ -29,8 +29,14 @@
         <p><button id="simulate"><img src="box.png" alt="simulator box">
                 <p>+1</p>
             </button>
+            <button id="p10"><img src="box.png" alt="simulator box">
+                <p>+10</p>
+            </button>
             <button id="p100"><img src="box.png" alt="simulator box">
                 <p>+100</p>
+            </button>
+            <button id="pinp"><img src="box.png" alt="simulator box">
+                <p>Open: <input id="inp" class="input" type="number"></p>
             </button>
         </p>
         <h3><button id="clear" value="reset">Clear</button></h3>
