--- a/Mario Kart Simulator! JS/Index.html
+++ b/Mario Kart Simulator! JS/Index.html
@@ -38,7 +38,11 @@
             <button id="pinp"><img src="box.png" alt="simulator box">
                 <p>Open: <input id="inp" class="input" type="number"></p>
             </button>
+            <button id="shroom"><img src="box.png" alt="simulator box">
+                <p>Until 1 Golden Mushroom</p>
+            </button>
         </p>
+
         <h3><button id="clear" value="reset">Clear</button></h3>
 
 
